[project]
name = "local-llm-hierarchical-classifier-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llm-parallelization",
]

[tool.uv.sources]
llm-parallelization = {path = "/home/clyde/workspace/repositories/llm_parallelization", editable = true}

[tool.uv.workspace]
members = [
    "lib/*",
    "svc/preprocessing",
]

